CKA/test-ingres/deployment.yaml
---
apiVersion: apps/v1
metadata:
  name: deployment-test
  labels:
    app: test
kind: Deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: portfolio
          image: victormungai/digital-portfolio:latest
          ports:
            - name: portfolio-port
              containerPort: 80
