CKA/test-ingres/clusterip.yaml
---
apiVersion: v1
metadata:
  name: portfolio-cluster
  labels:
    app: cluster-ip
kind: Service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
      app: test
